# tinyflow

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  hello.py  pyproject.toml  run.sh  train.py
.github/workflows/: lint.yml  tests.yml
configs/: cifar10_improved.yaml  config.yaml  generate_config.yaml  generate_moons_config.yaml
configs/dataset/: cifar10.yaml  fashion_mnist.yaml  mnist.yaml  moons.yaml
configs/experiment/: mnist_cosine.yaml  mnist_polynomial.yaml  moons_comparison.yaml  quick_test.yaml
configs/generation/: mnist_default.yaml  moons_default.yaml
configs/lr_scheduler/: cosine.yaml  cosine_warm_restarts.yaml  cosine_warmup.yaml  cosine_warmup_long.yaml  none.yaml  step.yaml  step_warmup.yaml
configs/model/: neural_network.yaml  unet.yaml  unet_large.yaml
configs/optimizer/: adam.yaml
configs/scheduler/: cosine.yaml  linear.yaml  lvp.yaml  polynomial.yaml
configs/solver/: ddim.yaml  euler.yaml  heun.yaml  midpoint.yaml  rk4.yaml
configs/training/: cifar10_default.yaml  cifar10_improved.yaml  mnist_default.yaml  moons_default.yaml
examples/: generate_animation.py  generate_images.py  generate_moons.py  generate_samples.py  train_images_hydra.py  train_mnist.py  train_mnist_hydra.py  train_moons.py  train_moons_hydra.py
scripts/: download_datasets.py  train_fid_classifier.py
tests/: __init__.py  test_integration.py  test_lr_schedulers.py  test_metrics.py  test_nn.py  test_paths.py  test_schedulers.py  test_solvers.py
tinyflow/: dataloader.py  logging.py  losses.py  metrics.py  nn.py  trainer.py  utils.py
tinyflow/nn_utils/: attention.py  conv.py  lr_scheduler.py  time_embedding.py
tinyflow/path/: __init__.py  path.py  scheduler.py
tinyflow/solver/: __init__.py  ddim.py  euler.py  heun.py  midpoint.py  rk4.py  solver.py
