[project]
name = "flow-matching-tinygrad"
version = "0.1.0"
description = "Implementing elementary flow matching algorithms in tinygrad"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "loguru>=0.7.3",
  "numpy>=2.2.1",
  "pydantic>=2.10.5",
  "scikit-image>=0.25.2",
  "scikit-learn>=1.6.0",
  "scipy>=1.15.0",
  "seaborn>=0.13.2",
  "tinygrad>=0.10.0",
  "tqdm>=4.67.1",
]

[tool.pyright]
venv = "."
venvPath = ".venv"
typeCheckingMode = "basic"
