[project]
name = "tinyflow"
version = "0.2.0"
description = "Implementing elementary flow matching algorithms in tinygrad"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "loguru>=0.7.3",
  "numpy>=2.2.1",
  "pydantic>=2.10.5",
  "scikit-image>=0.25.2",
  "scikit-learn>=1.6.0",
  "scipy>=1.15.0",
  "seaborn>=0.13.2",
  "tinygrad>=0.10.0",
  "tqdm>=4.67.1",
]

[tool.pyright]
venv = "."
venvPath = ".venv"
typeCheckingMode = "basic"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pre-commit>=4.0.0",
]


[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
